--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
+    "jwt-decode": "^3.1.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-calendar": "^3.4.0",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.14.2",
+    "react-icons-kit": "^2.0.0",
+    "react-loading-skeleton": "^2.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-time-picker": "^4.4.1",
+    "react-toastify": "^8.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
